@@ -1,6 +1,7 @@
 2014-02-11  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #55436: findRootPageId: Infinite Loop in case of circular redirect
+	* Fixed bug #52651: Autoconf won't be created when hook is used
 
 2013-10-09  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
